--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.3",
+    "redis": "^4.6.14",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
